--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -11,27 +11,28 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarColor02">
-        <ul class="navbar-nav me-auto">
-          {%- macro nav_item(title, ref, ref_is_route=True) -%}
-            {%- set active = (request.endpoint == route) %}
-            <li class="nav-item {% if active %}active{% endif %}>">
-              <a class="nav-link" href="{{ url_for(ref) if ref_is_route else ref }}">
-                {{ title }}
-                {%- if active %}<span class="visually-hidden">(current)</span>{% endif %}
-              </a>
-            </li>
-          {%- endmacro -%}
+        {% if g.user %}
+          <ul class="navbar-nav me-auto">
+            {%- macro nav_item(title, ref, ref_is_route=True) -%}
+              {%- set active = (request.endpoint == route) %}
+              <li class="nav-item {% if active %}active{% endif %}>">
+                <a class="nav-link" href="{{ url_for(ref) if ref_is_route else ref }}">
+                  {{ title }}
+                  {%- if active %}<span class="visually-hidden">(current)</span>{% endif %}
+                </a>
+              </li>
+            {%- endmacro -%}
 
-          {{ nav_item('Dasbor', 'main.index') }}
-          {{ nav_item('Tiket Terbuka', 'main.index') }}
-          {{ nav_item('Tiket Selesai', 'main.index') }}
-          {{ nav_item('Pengguna', 'main.index') }}
+            {{ nav_item('Dasbor', 'admin.dashboard') }}
+            {{ nav_item('Tiket Terbuka', 'main.index') }}
+            {{ nav_item('Tiket Selesai', 'main.index') }}
 
-        </ul>
-        <ul class="navbar-nav ms-auto">
-          {{ nav_item('Ganti Password', 'main.index') }}
-          {{ nav_item('Keluar', 'main.index') }}
-        </ul>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            {{ nav_item('Ganti Password', 'admin.change_password') }}
+            {{ nav_item('Keluar', 'admin.logout') }}
+          </ul>
+        {% endif %}
       </div>
     </div>
   </nav>
