--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -1,6 +1,18 @@
 {% extends "admin/base.html" %}
 
 {% block container %}
-<h1>Masuk</h1>
+  <h1>Masuk</h1><br/>
+
+  <form method="post">
+    <div class="mb-3">
+      <label for="username" class="form-label">Username:</label>
+      <input class="form-control" id="username" name="username" type="text" required>
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password:</label>
+      <input class="form-control" id="password" name="password" type="password" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Masuk</button>
+  </form>
 
 {% endblock %}
