Fitur daftar tiket
Signed-off-by: Faiz Jazadi <me@lcat.dev>

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -14,7 +14,7 @@
         {% if g.user %}
           <ul class="navbar-nav me-auto">
             {%- macro nav_item(title, ref, ref_is_route=True) -%}
-              {%- set active = (request.endpoint == route) %}
+              {%- set active = (request.endpoint == ref) %}
               <li class="nav-item {% if active %}active{% endif %}>">
                 <a class="nav-link" href="{{ url_for(ref) if ref_is_route else ref }}">
                   {{ title }}
@@ -24,8 +24,8 @@
             {%- endmacro -%}
 
             {{ nav_item('Dasbor', 'admin.dashboard') }}
-            {{ nav_item('Tiket Terbuka', 'main.index') }}
-            {{ nav_item('Tiket Selesai', 'main.index') }}
+            {{ nav_item('Tiket Terbuka', 'admin.tiket_terbuka') }}
+            {{ nav_item('Tiket Selesai', 'admin.tiket_terbuka') }}
 
           </ul>
           <ul class="navbar-nav ms-auto">
