Fitur detail tiket dan tambah balasan
Signed-off-by: Faiz Jazadi <me@lcat.dev>

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -25,7 +25,7 @@
 
             {{ nav_item('Dasbor', 'admin.dashboard') }}
             {{ nav_item('Tiket Terbuka', 'admin.tiket_terbuka') }}
-            {{ nav_item('Tiket Selesai', 'admin.tiket_terbuka') }}
+            {{ nav_item('Tiket Selesai', 'admin.tiket_selesai') }}
 
           </ul>
           <ul class="navbar-nav ms-auto">
