--- a/app/templates/form_next.html
+++ b/app/templates/form_next.html
@@ -7,7 +7,7 @@
   <div class="text-center bg-success p-3 text-dark rounded-3">
     <strong class="display-6 mb-3">ID tiket Anda adalah</strong>
     <div class="container pt-2 text-light display-1 my-3">
-      <div class="bg-dark d-inline-block rounded-3 p-3">{{ tiket.public_id }}</div>
+      <div class="bg-dark d-inline-block font-monospace rounded-3 p-3">{{ tiket.public_id }}</div>
     </div>
     <p><strong>Penting!</strong> Simpan ID tiket Anda untuk keperluan pengecekan status</p>
   </div>
