--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -4,7 +4,7 @@
   <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark" x-data>
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        Kamulyo
+        KamulyoPelayanan
         <small><span class="badge bg-danger small">adm</span></small>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
