--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block container %}
   <div class="container-fluid bg-light p-4 p-sm-5 mb-3 rounded-3">
-    <h1 class="font-bold">Layanan Kamulyo</h1>
+    <h1 class="font-bold">Buat Tiket</h1>
     <p>Satu formulir untuk semuanya.</p>
   </div>
 
@@ -57,6 +57,15 @@
           required
           /></textarea>
     </div>
+    <div class="mb-3">
+      <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="checkTampilkanTiketPublik" name="isPublik" value="1" checked="">
+        <label class="form-check-label" for="checkTampilkanTiketPublik">Tampilkan tiket secara publik</label>
+      </div>
+    </div>
+    <p>
+    Dengan menekan tombol "Kirim", Anda menyetujui penggunaan data yang dikirimkan untuk keperluan pengolahan tiket.
+    </p>
     <button type="submit" class="btn btn-lg btn-primary">Kirim</button>
   </form>
 {% endblock %}
