--- a/app/templates/admin/tiket_detail.html
+++ b/app/templates/admin/tiket_detail.html
@@ -1,4 +1,5 @@
 {% extends "admin/base.html" %}
+{% from "macros/tiket_detail.html" import tiket_detail_table, tiket_balasan_table %}
 
 {% block container %}
   <h1>Tiket</h1>
@@ -6,42 +7,10 @@
   <p class="badge fs-6 bg-info">{{ tiket.jenis|upper }}</p>
   <p class="badge fs-6 bg-danger">Belum Selesai</p>
 
-  <div class="table-responsive" x-data="{ show: true }">
-    <table class="table table-striped table-sm">
-      {% macro detail_row(key, value, extra_class="") %}
-        <tr>
-          <td class="{{ extra_class }}">{{ key }}</td>
-          <td class="{{ extra_class }}">{{ value }}</td>
-        </tr>
-      {% endmacro %}
-      {{ detail_row('Subjek', tiket.subjek, extra_class="fs-5 fw-bold") }}
-      {{ detail_row('ID Tiket Publik', tiket.public_id) }}
-      {{ detail_row('Nama Pengirim', tiket.nama_pengirim) }}
-      {{ detail_row('No HP Pengirim', tiket.nohp_pengirim) }}
-      {{ detail_row('Tanggal dibuat', tiket.tgl_dibuat) }}
-    </table>
-    <label class="form-label">
-      Narasi:
-      <button class="btn btn-sm btn-outline-secondary" @click="show = !show" x-text="show ? 'Sembunyikan' : 'Tampilkan'"></button>
-    </label>
-    <div class="border border-info rounded-2 p-3 font-monospace" x-show="show">{{ tiket.narasi }}</div>
-  </div>
+  {{ tiket_detail_table(tiket) }}
 
   <h2 class="mt-3">Balasan</h2>
-  <div class="table-responsive">
-    <table class="table table-striped table-sm">
-      <tr>
-        <th>Tanggal</th>
-        <th>Isi balasan</th>
-      </tr>
-      {% for balasan in tiket.balasans %}
-        <tr>
-          <td>{{ balasan.tgl_dibuat }}</td>
-          <td>{{ balasan.isi }}</td>
-        </tr>
-      {% endfor %}
-    </table>
-  </div>
+  {{ tiket_balasan_table(tiket) }}
 
   <h2>Aksi</h2>
   <form method="post" action="{{ url_for('admin.tiket_tambah_balasan', tiket_id=tiket.id) }}">
