--- a/app/templates/status_tiket.html
+++ b/app/templates/status_tiket.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
+{% from "macros/tiket_detail.html" import tiket_detail_table, tiket_balasan_table %}
 
 {% block container %}
-<h1>Status Tiket</h1>
+  <h1>Status Tiket</h1>
 
-{{ tiket.id }}
+  <p class="badge fs-6 bg-info">{{ tiket.jenis|upper }}</p>
+  <p class="badge fs-6 bg-danger">Belum Selesai</p>
+
+  {{ tiket_detail_table(tiket) }}
+
+  <h2 class="mt-3">Balasan</h2>
+  {{ tiket_balasan_table(tiket) }}
+
 {% endblock %}
