feat: Papan aduan publik
Signed-off-by: Faiz Jazadi <me@lcat.dev>

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -20,7 +20,7 @@
         {%- endmacro -%}
 
         {{ nav_item('Buat Tiket', 'main.index') }}
-        {{ nav_item('Papan Aduan Publik', 'main.index') }}
+        {{ nav_item('Papan Aduan Publik', 'main.papan_aduan_publik') }}
         {{ nav_item('FAQ', '#', False) }}
 
         <li class="nav-item"><a class="nav-link" href="#" x-on:click="$refs.inpIdTiket.focus()">Cek Status</a></li>
