--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,68 +4,90 @@
     <p>Satu formulir untuk semuanya.</p>
   </div>
 
-  <form method="post" class="">
-    <div class="mb-3">
-      <label class="form-label" for="jenis">Jenis:</label>
-      <select name="jenis" id="jenis" class="form-select">
-        <option value="pengaduan">Pengaduan</option>
-        <option value="pengajuan">Pengajuan</option>
-      </select>
-    </div>
-    <div class="mb-3">
-      <label class="form-label" for="nama">Nama:</label>
-      <input
-          type="text"
-          class="form-control"
-          id="nama"
-          name="nama"
-          placeholder="Masukkan nama lengkap Anda"
-          required
-          autofocus
-          />
-    </div>
-
-    <div class="mb-3">
-      <label class="form-label" for="nomorHp">Nomor HP:</label>
-      <input
-          type="text"
-          class="form-control"
-          id="nomorHp"
-          name="nomorHp"
-          placeholder="mis. 085123339929"
-          required
-          />
-    </div>
-    <div class="mb-3">
-      <label class="form-label" for="subjek">Subjek:</label>
-      <input
-          type="text"
-          class="form-control"
-          id="subjek"
-          name="subjek"
-          placeholder="mis. Permohonan Izin Surat Keterangan Meninggal Dunia"
-          required
-          />
-    </div>
-    <div class="mb-3">
-      <label class="form-label" for="narasi">Narasi:</label>
-      <textarea
-          class="form-control"
-          id="narasi"
-          name="narasi"
-          minlength="20"
-          required
-          /></textarea>
-    </div>
-    <div class="mb-3">
-      <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" id="checkTampilkanTiketPublik" name="isPublik" value="1" checked="">
-        <label class="form-check-label" for="checkTampilkanTiketPublik">Tampilkan tiket secara publik</label>
+  <div x-data>
+    <form method="post" x-on:submit.prevent="handleFormSubmit($el)">
+      <div class="mb-3">
+        <label class="form-label" for="jenis">Jenis:</label>
+        <select name="jenis" id="jenis" class="form-select">
+          <option value="pengaduan">Pengaduan</option>
+          <option value="pengajuan">Pengajuan</option>
+        </select>
       </div>
-    </div>
-    <p>
-    Dengan menekan tombol "Kirim", Anda menyetujui penggunaan data yang dikirimkan untuk keperluan pengolahan tiket.
-    </p>
-    <button type="submit" class="btn btn-lg btn-primary">Kirim</button>
-  </form>
+      <div class="mb-3">
+        <label class="form-label" for="nama">Nama:</label>
+        <input
+            type="text"
+            class="form-control"
+            id="nama"
+            name="nama"
+            placeholder="Masukkan nama lengkap Anda"
+            required
+            autofocus
+            />
+      </div>
+
+      <div class="mb-3" x-data="{ nomorHp: '', first: true }">
+        <label class="form-label" for="nomorHp">Nomor WhatsApp:</label>
+        <input
+            type="text"
+            class="form-control"
+            id="nomorHp"
+            name="nomorHp"
+            placeholder="mis. 085123339929"
+            x-model="nomorHp"
+            x-on:keyup="first = false"
+            x-bind:class="{ 'is-invalid': !isNomorHpValid(nomorHp) && !first}"
+            required
+            />
+        <div class="invalid-feedback">
+          Nomor WhatsApp tidak valid! Pastikan mengikuti format 08xxxxxxxxxx.
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="subjek">Subjek:</label>
+        <input
+            type="text"
+            class="form-control"
+            id="subjek"
+            name="subjek"
+            placeholder="mis. Permohonan Izin Surat Keterangan Meninggal Dunia"
+            required
+            />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="narasi">Narasi:</label>
+        <textarea
+            class="form-control"
+            id="narasi"
+            name="narasi"
+            minlength="20"
+            required
+            /></textarea>
+      </div>
+      <div class="mb-3">
+        <div class="form-check form-switch">
+          <input class="form-check-input" type="checkbox" id="checkTampilkanTiketPublik" name="isPublik" value="1" checked="">
+          <label class="form-check-label" for="checkTampilkanTiketPublik">Tampilkan tiket secara publik</label>
+        </div>
+      </div>
+      <p>
+      Dengan menekan tombol "Kirim", Anda menyetujui penggunaan data yang dikirimkan untuk keperluan pengolahan tiket.
+      </p>
+      <button type="submit" class="btn btn-lg btn-primary" x-bind:class="{ 'disabled': !formValid }">Kirim</button>
+    </form>
+  </div>
+  <script>
+    function isNomorHpValid(nomorHp) {
+      return /^08[0-9]{5,13}$/.test(nomorHp);
+    }
+
+    function handleFormSubmit(form) {
+      if (!isNomorHpValid(form.nomorHp.value)) {
+        form.nomorHp.focus();
+      } else {
+        if (confirm('Apakah Anda yakin data yang dimasukkan sudah benar?'))
+        form.submit();
+      }
+    }
+  </script>
 {% endblock %}
