--- a/app/templates/form_next.html
+++ b/app/templates/form_next.html
@@ -1,15 +1,22 @@
 {% extends "base.html" %}
 {% block container %}
   <h1>Tiket berhasil dibuat!</h1>
+
   <hr />
+
   <p><strong>Subjek: {{ tiket.subjek }}</strong></p>
   <p>SMS notifikasi pembuatan tiket telah dikirimkan ke nomor HP Anda.</p>
   <div class="text-center bg-success p-3 text-dark rounded-3">
     <strong class="display-6 mb-3">ID tiket Anda adalah</strong>
     <div class="container pt-2 text-light display-1 my-3">
-      <div class="bg-dark d-inline-block font-monospace rounded-3 p-3">{{ tiket.public_id }}</div>
+      <div class="bg-dark d-inline-block font-monospace rounded-3 p-3">
+        {{ tiket.public_id }}
+      </div>
     </div>
-    <p><strong>Penting!</strong> Simpan ID tiket Anda untuk keperluan pengecekan status</p>
+    <p>
+      <strong>Penting!</strong> Simpan ID tiket Anda untuk keperluan pengecekan
+      status
+    </p>
   </div>
   <hr />
   <h2>Langkah Berikutnya</h2>
@@ -20,16 +27,18 @@
       <strong>24 jam</strong> untuk mendapatkan perubahan status.
     </li>
     <li>
-      <strong>Simpan ID tiket Anda</strong> untuk memudahkan Anda dalam memantau status
-      tiket Anda. ID tiket tersebut akan Anda gunakan untuk memantau status tiket Anda.
+      <strong>Simpan ID tiket Anda</strong> untuk memudahkan Anda dalam memantau
+      status tiket Anda. ID tiket tersebut akan Anda gunakan untuk memantau
+      status tiket Anda.
     </li>
     <li>
-      Segala perubahan status akan dikirimkan melalui SMS ke nomor HP Anda. Namun, Anda
-      juga dapat memantau perkembangan status tiket Anda melalui halaman status tiket.
+      Segala perubahan status akan dikirimkan melalui SMS ke nomor HP Anda.
+      Namun, Anda juga dapat memantau perkembangan status tiket Anda melalui
+      halaman status tiket.
     </li>
     <li>
-      Notifikasi SMS yang dikirimkan hanya <strong>bersifat satu arah</strong>. Artinya,
-      Anda tidak dapat membalas SMS tersebut.
+      Notifikasi SMS yang dikirimkan hanya <strong>bersifat satu arah</strong>.
+      Artinya, Anda tidak dapat membalas SMS tersebut.
     </li>
   </ol>
 {% endblock %}
