--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -39,12 +39,7 @@
         {{ nav_item('Buat Tiket', 'main.index') }}
         {{ nav_item('Papan Aduan Publik', 'main.papan_aduan_publik') }}
         {{ nav_item('Soal Sering Ditanya', 'main.soal_sering_ditanya') }}
-
-        <li class="nav-item">
-          <a class="nav-link" href="#" x-on:click="$refs.inpIdTiket.focus()"
-            >Cek Status</a
-          >
-        </li>
+        {{ nav_item('Kembali ke Kamulyo', 'https://kamulyo.id', ref_is_route=False) }}
       </ul>
       <form class="d-flex" action="{{ url_for('main.cari_tiket') }}">
         <input
@@ -55,8 +50,18 @@
           placeholder="ID Tiket"
         />
         <input type="hidden" name="next" value="{{ request.path }}" />
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">
-          Cari
+        <button class="btn btn-secondary w-50 my-2 my-sm-0" type="submit">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="1em"
+            viewBox="0 0 512 512"
+          >
+            <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+            <path
+              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
+            />
+          </svg>
+          Cek Status
         </button>
       </form>
     </div>
