Add custom bootstrap and sass files
Signed-off-by: Faiz Jazadi <me@lcat.dev>

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -50,7 +50,7 @@
           placeholder="ID Tiket"
         />
         <input type="hidden" name="next" value="{{ request.path }}" />
-        <button class="btn btn-secondary w-50 my-2 my-sm-0" type="submit">
+        <button class="btn btn-secondary text-nowrap my-2 my-sm-0" type="submit">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             height="1em"
