--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block container %}
-  <div class="container-fluid bg-light p-4 p-sm-5 mb-3 rounded-3">
+  <div class="container-fluid bg-light p-4 p-sm-5 mb-3 rounded-1 bg-pattern-1">
     <h1 class="font-bold">Buat Tiket</h1>
     <p>Satu formulir untuk semuanya.</p>
   </div>
