--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-lg bg-light border border-bottom-1"
+  class="navbar navbar-expand-lg bg-light border-bottom border-bottom-1"
   data-bs-theme="light"
   x-data
 >
@@ -23,9 +23,9 @@
       <ul class="navbar-nav me-auto">
         {%- macro nav_item(title, ref, ref_is_route=True) -%}
           {%- set active = (request.endpoint == ref) -%}
-          <li class="nav-item {% if active %}active{% endif %}>">
+          <li class="nav-item">
             <a
-              class="nav-link"
+              class="nav-link {% if active %}active{% endif %}"
               href="{{ url_for(ref) if ref_is_route else ref }}"
             >
               {{ title }}
@@ -36,7 +36,7 @@
           </li>
         {%- endmacro -%}
 
-        {{ nav_item('Buat Tiket', 'main.index') }}
+        {{ nav_item('Buat Tiket', 'main.buat_tiket_form') }}
         {{ nav_item('Papan Aduan Publik', 'main.papan_aduan_publik') }}
         {{ nav_item('Soal Sering Ditanya', 'main.soal_sering_ditanya') }}
         {{ nav_item('Kembali ke Kamulyo', 'https://kamulyo.id', ref_is_route=False) }}
