Update colors to better suit the new palette
Signed-off-by: Faiz Jazadi <me@lcat.dev>

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -44,7 +44,7 @@
     {{
       stat_card(bg='success', fg='white',
       title='Tiket Selesai', value=tiket_counts_data['selesai'],
-      links_to=url_for('admin.tiket_terbuka'),
+      links_to=url_for('admin.tiket_selesai'),
       help_text='Tiket yang ditandai sudah selesai')
     }}
   </div>
