--- a/app/templates/form_next.html
+++ b/app/templates/form_next.html
@@ -6,7 +6,7 @@
 
   <p><strong>Subjek: {{ tiket.subjek }}</strong></p>
   <p>SMS notifikasi pembuatan tiket telah dikirimkan ke nomor HP Anda.</p>
-  <div class="text-center bg-success p-3 text-dark rounded-3">
+  <div class="text-center bg-success p-3 text-light rounded-3">
     <strong class="display-6 mb-3">ID tiket Anda adalah</strong>
     <div class="container pt-2 text-light display-1 my-3">
       <div class="bg-dark d-inline-block font-monospace rounded-3 p-3">
