--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,6 +31,19 @@
         />
       </div>
 
+      <div class="mb-3">
+        <label class="form-label" for="nama">NIK:</label>
+        <input
+          type="text"
+          class="form-control"
+          id="nik"
+          name="nik"
+          placeholder="Masukkan NIK Anda"
+          required
+          autofocus
+        />
+      </div>
+
       <div class="mb-3" x-data="{ nomorHp: '', first: true, verified: false }">
         <label class="form-label" for="nomorHp">Nomor WhatsApp:</label>
         <input
