--- a/app/templates/macros/tiket_detail.html
+++ b/app/templates/macros/tiket_detail.html
@@ -14,7 +14,10 @@
       }}
 
       {{ detail_row('ID Tiket Publik', tiket.public_id) }}
+
       {{ detail_row('Nama Pengirim', tiket.nama_pengirim) }}
+
+      {{ detail_row('NIK Pengirim', tiket.nik) }}
 
       {{
         detail_row('No HP
